; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bochs/extr_bochs_drv.c_bochs_unload.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bochs/extr_bochs_drv.c_bochs_unload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.bochs_device* }
%struct.bochs_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_device*)* @bochs_unload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bochs_unload(%struct.drm_device* %0) #0 {
  %2 = alloca %struct.drm_device*, align 8
  %3 = alloca %struct.bochs_device*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %2, align 8
  %4 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %5 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %4, i32 0, i32 0
  %6 = load %struct.bochs_device*, %struct.bochs_device** %5, align 8
  store %struct.bochs_device* %6, %struct.bochs_device** %3, align 8
  %7 = load %struct.bochs_device*, %struct.bochs_device** %3, align 8
  %8 = call i32 @bochs_kms_fini(%struct.bochs_device* %7)
  %9 = load %struct.bochs_device*, %struct.bochs_device** %3, align 8
  %10 = call i32 @bochs_mm_fini(%struct.bochs_device* %9)
  %11 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %12 = call i32 @bochs_hw_fini(%struct.drm_device* %11)
  %13 = load %struct.bochs_device*, %struct.bochs_device** %3, align 8
  %14 = call i32 @kfree(%struct.bochs_device* %13)
  %15 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %16 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %15, i32 0, i32 0
  store %struct.bochs_device* null, %struct.bochs_device** %16, align 8
  ret void
}

declare dso_local i32 @bochs_kms_fini(%struct.bochs_device*) #1

declare dso_local i32 @bochs_mm_fini(%struct.bochs_device*) #1

declare dso_local i32 @bochs_hw_fini(%struct.drm_device*) #1

declare dso_local i32 @kfree(%struct.bochs_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
